--- a/client/dev/partials/projects/reporting-analysis-list.html
+++ b/client/dev/partials/projects/reporting-analysis-list.html
@@ -22,7 +22,7 @@
 			</td>
 		</tr>
 	</tbody>
-	<tfoot acl-has-project-role="owner">
+	<tfoot acl-has-project-role="input">
 		<tr>
 			<td colspan="3">
 				<a class="btn btn-default btn-xs" style="width: 100%" translate="shared.add" ui-sref="main.project.reporting_analysis({reportId:'new'})" ></a>
