--- a/client/dev/partials/projects/input-entities.html
+++ b/client/dev/partials/projects/input-entities.html
@@ -1,7 +1,7 @@
 <ol class="breadcrumb">
-	<li><a ui-sref="main.projects" translate>shared.projects</a></li>
-	<li><a ui-sref="main.project.logical_frame({projectId: project._id})">{{project.name}}</a></li>
-	<li class="active" translate>shared.input_entities</li>
+	<li><a ui-sref="main.projects" translate="shared.projects"></a></li>
+	<li><a ui-sref="main.project.logical_frame({projectId: project._id})" ng-bind="project.name"></a></li>
+	<li class="active" translate="shared.input_entities"></li>
 </ol>
 
 <form name="projectForm" novalidate>
@@ -9,7 +9,7 @@
 		<thead>
 			<tr>
 				<th translate="project.entity_name"></th>
-				<th style="width: 100px;"></th>
+				<th style="width: 100px" acl-has-project-role="owner"></th>
 			</tr>
 		</thead>
 		<tbody>
@@ -29,10 +29,10 @@
 						</div>
 					</ng-form>
 				</td>
-				<td style="text-align: center">
-					<button class="btn btn-danger btn-sm" ng-click="delete(inputEntity.id)" acl-has-project-role="owner">
+				<td style="text-align: center" acl-has-project-role="owner">
+					<button class="btn btn-danger btn-sm" ng-click="delete(inputEntity.id)">
 						<i class="fa fa-remove"></i>
-						<span translate>shared.delete</span>
+						<span translate="shared.delete"></span>
 					</button>
 				</td>
 			</tr>
@@ -40,7 +40,7 @@
 		<tfoot acl-has-project-role="owner">
 			<tr>
 				<td colspan="3">
-					<button class="btn btn-default btn-xs" ng-click="create()" style="width: 100%" translate>shared.add</button>
+					<button class="btn btn-default btn-xs" ng-click="create()" style="width: 100%" translate="shared.add"></button>
 				</td>
 			</tr>
 		</tfoot>
