--- a/client/dev/partials/projects/menu.html
+++ b/client/dev/partials/projects/menu.html
@@ -4,11 +4,11 @@
 		<div class="panel-group">
 			<div class="panel panel-default">
 				<div class="panel-heading">
-					<h4 class="panel-title">Spécifications</h4>
+					<h4 class="panel-title" translate="project.specs"></h4>
 				</div>
 
 				<div class="panel-collapse">
-					<div class="list-group">
+					<div class="list-group" ng-if="project._id">
 						<a ui-sref="main.project.logical_frame({projectId: project._id})" ui-sref-active="active" class="list-group-item">
 							<i class="fa fa-building-o fa-fw"></i>
 							<span translate="shared.logical_frame"></span>
@@ -29,16 +29,23 @@
 							<span translate="project.users"></span>
 						</a>
 					</div>
+
+					<div class="list-group" ng-if="!project._id">
+						<a class="list-group-item active"><i class="fa fa-building-o fa-fw"></i> <span translate="shared.logical_frame"></span></a>
+						<a class="list-group-item"><i class="fa fa-map-marker fa-fw"></i> <span translate="shared.input_entities"></span></a>
+						<a class="list-group-item"><i class="fa fa-map-marker fa-fw"></i> <span translate="shared.input_groups"></span></a>
+						<a class="list-group-item"><i class="fa fa-users fa-fw"></i> <span translate="project.users"></span></a>
+					</div>
 				</div>
 			</div>
 
 			<div class="panel panel-default">
 				<div class="panel-heading">
-					<h4 class="panel-title">Suivi des indicateurs</h4>
+					<h4 class="panel-title" translate="project.indicators_management"></h4>
 				</div>
 
 				<div class="panel-collapse">
-					<div class="list-group">
+					<div class="list-group" ng-if="project._id">
 						<a ui-sref="main.project.forms({projectId: project._id})" ng-class="{active: $state.is('main.project.forms') || $state.is('main.project.form')}" class="list-group-item">
 							<i class="fa fa-file-text-o fa-fw"></i>
 							<span translate="project.input_forms"></span>
@@ -59,145 +66,17 @@
 							<span translate="shared.reporting_analysis"></span>
 						</a>
 					</div>
-				</div>
-			</div>
-<!-- 
-			<div class="panel panel-default">
-				<div class="panel-heading">
-					<h4 class="panel-title">Suivi des indicateurs</h4>
-				</div>
 
-				<div class="panel-collapse">
-					<div class="list-group">
-						<a ui-sref="main.project.forms({projectId: project._id})" tooltip="{{'project.input_forms_tooltip'|translate}}" class="list-group-item">
-							<i class="fa fa-file-text-o fa-fw"></i>
-							<span translate="project.input_forms"></span>
-						</a>
-
-						<a ui-sref="main.project.input_list({projectId: project._id})" tooltip="{{'project.waiting_inputs_tooltip'|translate}}" class="list-group-item">
-							<i class="fa fa-clock-o fa-fw"></i>
-							<span translate="project.waiting_inputs"></span>
-						</a>
-
-						<a ui-sref="main.project.reporting({projectId: project._id})" tooltip="{{'project.reporting_tooltip'|translate}}" class="list-group-item">
-							<i class="fa fa-line-chart fa-fw"></i>
-							<span translate="shared.reporting"></span>
-						</a>
+					<div class="list-group" ng-if="!project._id">
+						<a class="list-group-item"><i class="fa fa-file-text-o fa-fw"></i> <span translate="project.input_forms"></span></a>
+						<a class="list-group-item"><i class="fa fa-clock-o fa-fw"></i> <span translate="project.waiting_inputs"></span></a>
+						<a class="list-group-item"><i class="fa fa-line-chart fa-fw"></i> <span translate="shared.reporting"></span></a>
+						<a class="list-group-item"><i class="fa fa-lightbulb-o fa-fw"></i> <span translate="shared.reporting_analysis"></span></a>
 					</div>
 				</div>
-			</div> -->
-
+			</div>
 		</div>
+	</div>
 
-
-
-
-
-
-<!--
- 		<ul class="nav nav-pills nav-stacked" ng-if="project._id">
-			<li ui-sref-active="active">
-				<a ui-sref="main.project.logical_frame({projectId: project._id})" tooltip="{{'project.logical_frame_tooltip'|translate}}" tooltip-popup-delay="1000">
-				   <i class="fa fa-building-o fa-fw"></i>
-				   <span translate="shared.logical_frame"></span>
-				</a>
-			</li>
-
-			<li ng-class="{active: $state.is('main.project.input_entities') || $state.is('main.project.input_entities_reporting')}">
-				<a ui-sref="main.project.input_entities({projectId: project._id})" tooltip="{{'project.input_entities_tooltip'|translate}}" tooltip-popup-delay="1000">
-					<i class="fa fa-map-marker fa-fw"></i>
-					<span translate="shared.input_entities"></span>
-				</a>
-			</li>
-
-			<li ng-class="{active: $state.is('main.project.input_groups') || $state.is('main.project.input_groups_reporting')}">
-				<a ui-sref="main.project.input_groups({projectId: project._id})" tooltip="{{'project.input_groups_tooltip'|translate}}" tooltip-popup-delay="1000">
-					<i class="fa fa-map-marker fa-fw"></i>
-					<span translate="shared.input_groups"></span>
-				</a>
-			</li>
-
-			<li ng-class="{active: $state.is('main.project.forms') || $state.is('main.project.form')}">
-				<a ui-sref="main.project.forms({projectId: project._id})" tooltip="{{'project.input_forms_tooltip'|translate}}" tooltip-popup-delay="1000">
-					<i class="fa fa-file-text-o fa-fw"></i>
-					<span translate="project.input_forms"></span>
-				</a>
-			</li>
-			
-			<li ui-sref-active="active">
-				<a ui-sref="main.project.input_list({projectId: project._id})" tooltip="{{'project.waiting_inputs_tooltip'|translate}}" tooltip-popup-delay="1000">
-					<i class="fa fa-clock-o fa-fw"></i>
-					<span translate="project.waiting_inputs"></span>
-				</a>
-			</li>
-
-			<li ui-sref-active="active">
-				<a ui-sref="main.project.reporting({projectId: project._id})" tooltip="{{'project.reporting_tooltip'|translate}}" tooltip-popup-delay="1000">
-				   <i class="fa fa-line-chart fa-fw"></i>
-				   <span translate="shared.reporting"></span>
-				</a>
-			</li>
-
-			<li ui-sref-active="active">
-				<a ui-sref="main.project.user_list" tooltip="{{'project.user_list_tooltip'|translate}}" tooltip-popup-delay="1000">
-				   <i class="fa fa-users fa-fw"></i>
-				   <span translate="project.users"></span>
-				</a>
-			</li>
-		</ul>
-
-		<ul class="nav nav-pills nav-stacked" ng-if="!project._id">
-			<li class="active">
-				<a>
-				   <i class="fa fa-building-o fa-fw"></i>
-				   <span translate="shared.logical_frame"></span>
-				</a>
-			</li>
-
-			<li class="disabled">
-				<a>
-					<i class="fa fa-map-marker fa-fw"></i>
-					<span translate="shared.input_entities"></span>
-				</a>
-			</li>
-
-			<li class="disabled">
-				<a>
-					<i class="fa fa-map-marker fa-fw"></i>
-					<span translate="shared.input_groups"></span>
-				</a>
-			</li>
-
-			<li class="disabled">
-				<a>
-					<i class="fa fa-file-text-o fa-fw"></i>
-					<span translate="project.input_forms"></span>
-				</a>
-			</li>
-			
-			<li class="disabled">
-				<a>
-					<i class="fa fa-clock-o fa-fw"></i>
-					<span translate="project.waiting_inputs"></span>
-				</a>
-			</li>
-
-			<li class="disabled">
-				<a>
-				   <i class="fa fa-line-chart fa-fw"></i>
-				   <span translate="shared.reporting"></span>
-				</a>
-			</li>
-
-			<li class="disabled">
-				<a>
-				   <i class="fa fa-users fa-fw"></i>
-				   <span translate="project.users"></span>
-				</a>
-			</li>
-		</ul>
-	-->
-</div>
-
-<div class="col-md-10 print-full-width" ui-view></div>
+	<div class="col-md-10 print-full-width" ui-view></div>
 </div>
