--- a/client/dev/partials/indicators/edit.html
+++ b/client/dev/partials/indicators/edit.html
@@ -4,20 +4,21 @@
 </ol>
 
 <form class="form-horizontal" role="form" name="indicatorForm" novalidate>
-	
-
 	<fieldset>
-		<legend translate="indicator.categorization"></legend>
+		<legend translate="indicator.definition"></legend>
 
-		<div class="form-group">
-			<label for="input-themes" class="col-sm-2 control-label" translate="indicator.themes"></label>
-			<div class="col-sm-10">
-				<ui-select id="input-themes" multiple ng-model="indicator.themes" name="themes" theme="bootstrap" required acl-has-role="indicator">
-					<ui-select-match placeholder="{{'indicator.select_themes'|translate}}">{{$item.name}}</ui-select-match>
-					<ui-select-choices repeat="theme._id as theme in themes | filter: {name: $select.search}">{{theme.name}}</ui-select-choices>
-				</ui-select>
+		<div class="form-group" show-errors>
+			<label for="input-name" class="col-sm-2 control-label" translate="shared.name"></label>
+			<div class="col-sm-10" acl-has-role="indicator" acl-fallback="indicator.name">
+				<input id="input-name"
+					   class="form-control"
+					   type="text"
+					   ng-model="indicator.name"
+					   name="name"
+					   placeholder="{{'indicator.name_ph'|translate}}"
+					   required />
 
-				<p class="form-control-static" acl-lacks-role="indicator">{{indicator.themes | getObjects:themes | pluck:'name' | join:', '}}</p>
+				<p class="help-block" ng-if="indicatorForm.name.$error.required" translate="form.mandatory"></p>
 			</div>
 		</div>
 
@@ -43,39 +44,6 @@
 				</select>
 			</div>
 		</div>
-	</fieldset>
-
-	<fieldset>
-		<legend translate="indicator.definition"></legend>
-
-		<div class="form-group" show-errors>
-			<label for="input-name" class="col-sm-2 control-label" translate="shared.name"></label>
-			<div class="col-sm-10" acl-has-role="indicator" acl-fallback="indicator.name">
-				<input id="input-name"
-					   class="form-control"
-					   type="text"
-					   ng-model="indicator.name"
-					   name="name"
-					   placeholder="{{'indicator.name_ph'|translate}}"
-					   required />
-
-				<p class="help-block" ng-if="indicatorForm.name.$error.required" translate="form.mandatory"></p>
-			</div>
-		</div>
-
-		<div class="form-group">
-			<label for="input-types" class="col-sm-2 control-label" translate="indicator.types"></label>
-
-			<div class="col-sm-10">
-				<ui-select id="input-types" multiple ng-model="indicator.types" name="types" theme="bootstrap" required acl-has-role="indicator">
-					<ui-select-match placeholder="{{'indicator.select_types'|translate}}">{{$item.name}}</ui-select-match>
-					<ui-select-choices repeat="type._id as type in types | filter: {name: $select.search}">{{type.name}}</ui-select-choices>
-				</ui-select>
-
-				<p class="form-control-static" acl-lacks-role="indicator">{{indicator.types | getObjects:types | pluck:'name' | join:', '}}</p>
-			</div>
-		</div>		
-
 
 		<div class="form-group" show-errors>
 			<label for="input-description" class="col-sm-2 control-label" translate="shared.description"></label>
@@ -91,24 +59,10 @@
 			</div>
 		</div>
 
-		<div class="form-group" show-errors>
-			<label for="input-history" class="col-sm-2 control-label" translate="indicator.history"></label>
-			<div class="col-sm-10" acl-has-role="indicator" acl-fallback="indicator.history">
-				<textarea id="input-history"
-						  name="history"
-						  ng-model="indicator.history"
-						  class="form-control"
-						  placeholder="{{'indicator.history_ph'|translate}}"></textarea>
-			</div>
-		</div>
-
-		<div class="form-group" show-errors>
+		<div class="form-group">
 			<label for="input-unit" class="col-sm-2 control-label" translate="indicator.unit"></label>
 			<div class="col-sm-10" acl-has-role="indicator" acl-fallback="indicator.unit">
-				<select id="input-unit"
-						name="unit"
-						ng-model="indicator.unit"
-						class="form-control">
+				<select id="input-unit" name="unit" ng-model="indicator.unit" class="form-control">
 					<option value="" translate="indicator.other"></option>
 					<option value="%" translate="indicator.percent"></option>
 					<option value="‰" translate="indicator.permille"></option>
@@ -116,42 +70,65 @@
 			</div>
 		</div>
 	</fieldset>
-<!-- 
+
 	<fieldset>
 		<legend translate="indicator.categorization"></legend>
 
+		<div class="form-group">
+			<label for="input-themes" class="col-sm-2 control-label" translate="indicator.themes"></label>
+			<div class="col-sm-10">
+				<ui-select id="input-themes" multiple ng-model="indicator.themes" name="themes" theme="bootstrap" required acl-has-role="indicator">
+					<ui-select-match placeholder="{{'indicator.select_themes'|translate}}">{{$item.name}}</ui-select-match>
+					<ui-select-choices repeat="theme._id as theme in themes | filter: {name: $select.search}">{{theme.name}}</ui-select-choices>
+				</ui-select>
 
+				<p class="form-control-static" acl-lacks-role="indicator">{{indicator.themes | getObjects:themes | pluck:'name' | join:', '}}</p>
+			</div>
+		</div>
+
+		<div class="form-group">
+			<label for="input-types" class="col-sm-2 control-label" translate="indicator.types"></label>
+
+			<div class="col-sm-10">
+				<ui-select id="input-types" multiple ng-model="indicator.types" name="types" theme="bootstrap" required acl-has-role="indicator">
+					<ui-select-match placeholder="{{'indicator.select_types'|translate}}">{{$item.name}}</ui-select-match>
+					<ui-select-choices repeat="type._id as type in types | filter: {name: $select.search}">{{type.name}}</ui-select-choices>
+				</ui-select>
+
+				<p class="form-control-static" acl-lacks-role="indicator">{{indicator.types | getObjects:types | pluck:'name' | join:', '}}</p>
+			</div>
+		</div>
 	</fieldset>
- -->
+
 	<fieldset>
 		<legend translate="indicator.computation"></legend>
 
 		<div class="form-group">
 			<label for="input-sum-allowed" class="col-sm-2 control-label" translate="indicator.time_aggregation"></label>
 			<div class="col-sm-10" acl-has-role="indicator" acl-fallback="indicator.sumAllowed">
-				<p class="form-control-static">
-					<select class="form-control" ng-model="indicator.timeAggregation">
-						<option value="sum" translate="indicator.time_aggregation_sum"></option>
-						<option value="average" translate="indicator.time_aggregation_average"></option>
-						<option value="none" translate="indicator.time_aggregation_none"></option>
-					</select>
-
-					<div class="alert alert-info" role="alert" translate="indicator.time_aggregation_help">
-					</div>					
-				</p>
+				<select class="form-control" ng-model="indicator.timeAggregation">
+					<option value="sum" translate="indicator.time_aggregation_sum"></option>
+					<option value="average" translate="indicator.time_aggregation_average"></option>
+					<option value="none" translate="indicator.time_aggregation_none"></option>
+				</select>
 			</div>
 		</div>
 
 		<div class="form-group">
 			<label for="input-sum-allowed" class="col-sm-2 control-label" translate="indicator.geo_aggregation"></label>
 			<div class="col-sm-10" acl-has-role="indicator" acl-fallback="indicator.sumAllowed">
-				<p class="form-control-static">
-					<select class="form-control" ng-model="indicator.geoAggregation">
-						<option value="sum" translate="indicator.geo_aggregation_sum"></option>
-						<option value="average" translate="indicator.geo_aggregation_average"></option>
-						<option value="none" translate="indicator.geo_aggregation_none"></option>
-					</select>
-				</p>
+				<select class="form-control" ng-model="indicator.geoAggregation">
+					<option value="sum" translate="indicator.geo_aggregation_sum"></option>
+					<option value="average" translate="indicator.geo_aggregation_average"></option>
+					<option value="none" translate="indicator.geo_aggregation_none"></option>
+				</select>
+
+				<a class="pull-right" ng-click="show_more=!show_more">
+					<i class="fa fa-info"></i>
+					{{'indicator.what_is_aggregation'|translate}}
+				</a>
+
+				<div ng-show="show_more" style="clear: both" ng-bind-html="'indicator.time_aggregation_help'|translate"></div>
 			</div>
 		</div>
 
@@ -212,16 +189,12 @@
 	</fieldset>
 
 	<div class="pull-right" acl-has-role="indicator">
-		<button class="btn btn-primary"
-				ng-disabled="indicatorForm.$invalid || isUnchanged() || !formulasAreValid"
-				ng-click="save()">
+		<button class="btn btn-primary" ng-disabled="indicatorForm.$invalid || isUnchanged() || !formulasAreValid" ng-click="save()">
 			<i class="fa fa-floppy-o"></i>
 			<span translate="shared.save"></span>
 		</button>
 
-		<button class="btn btn-default"
-				ng-disabled="isUnchanged()"
-				ng-click="reset()">
+		<button class="btn btn-default" ng-disabled="isUnchanged()" ng-click="reset()">
 			<i class="fa fa-undo"></i>
 			<span translate="shared.remove_changes"></span>
 		</button>
