--- a/client/dev/partials/indicators/edit.html
+++ b/client/dev/partials/indicators/edit.html
@@ -164,19 +164,41 @@
 					</tr>
 					<tr ng-repeat="symbol in indicator.formulas[formulaId].__symbols">
 						<td>{{'indicator.parameter'|translate}} <strong>"{{symbol}}"</strong></td>
-						<td acl-has-role="indicator" acl-fallback="indicatorsById[indicator.formulas[formulaId].parameters[symbol]].name">
-							<div class="input-group">
-								<input type="text"
-									   class="form-control"
-									   disabled
-									   ng-value="indicatorsById[indicator.formulas[formulaId].parameters[symbol]].name"
-									   placeholder="{{'shared.choose_indicator'|translate}}" />
+						<td acl-has-role="indicator" acl-fallback="indicator.formulas[formulaId].parameters[symbol].name">
 
-								<span class="input-group-btn">
-									<button class="btn btn-default" ng-click="chooseIndicator(formulaId, symbol)" translate="shared.choose"></button>
-								</span>
+							<div class="form-group">
+								<label class="col-sm-2 control-label" translate="shared.name"></label>
+								<div class="col-sm-10">
+									<input type="text"
+										   class="form-control"
+										   ng-model="indicator.formulas[formulaId].parameters[symbol].name"
+										   placeholder="" />
+								</div>
 							</div>
-						</td>
+
+							<div class="form-group">
+								<label class="col-sm-2 control-label" translate="indicator.geo_aggregation"></label>
+								<div class="col-sm-10">
+									<select class="form-control" ng-model="indicator.formulas[formulaId].parameters[symbol].geoAggregation">
+										<option value="sum" translate="indicator.geo_aggregation_sum"></option>
+										<option value="average" translate="indicator.geo_aggregation_average"></option>
+										<option value="none" translate="indicator.geo_aggregation_none"></option>
+									</select>										
+								</div>
+							</div>
+
+							<div class="form-group">
+								<label class="col-sm-2 control-label" translate="indicator.time_aggregation"></label>
+								<div class="col-sm-10">
+									<select class="form-control" ng-model="indicator.formulas[formulaId].parameters[symbol].timeAggregation">
+										<option value="sum" translate="indicator.time_aggregation_sum"></option>
+										<option value="average" translate="indicator.time_aggregation_average"></option>
+										<option value="none" translate="indicator.time_aggregation_none"></option>
+									</select>									
+								</div>
+							</div>
+
+ 						</td>
 					</tr>
 				</table>
 
