--- a/client/dev/partials/_directives/form-edit-fields.html
+++ b/client/dev/partials/_directives/form-edit-fields.html
@@ -1,10 +1,10 @@
 
 <table class="table table-bordered table-condensed">
 	<thead>
-		<th>Indicator</th>
-		<th>Somme Geo</th>
-		<th>Somme temps</th>
-		<th>Provenance</th>
+		<th translate="shared.indicator"></th>
+		<th translate="indicator.geo_aggregation"></th>
+		<th translate="indicator.time_aggregation"></th>
+		<th translate="project.source"></th>
 	</thead>
 	<tbody ng-repeat="field in form.fields">
 		<tr form-edit-field
