--- a/client/dev/partials/projects/form-list.html
+++ b/client/dev/partials/projects/form-list.html
@@ -15,7 +15,7 @@
 			<th translate="shared.active"></th>
 			<th translate="project.periodicity"></th>
 			<th translate="project.collect"></th>
-			<th style="width:100px"></th>
+			<th></th>
 		</tr>
 	</thead>
 	<tbody>
@@ -31,6 +31,11 @@
 			<td>{{'project.periodicities.' + form.periodicity|translate}}</td>
 			<td>{{'project.collects.' + form.collect|translate}}</td>
 			<td>
+				<a class="btn btn-default btn-xs" ui-sref="main.project.form_reporting({formId: form.id})">
+					<i class="fa fa-line-chart"></i>
+					<span translate="shared.reporting"></span>
+				</a>
+
 				<a class="btn btn-default btn-xs" ui-sref="main.project.form({formId: form.id})">
 					<i class="fa fa-pencil"></i>
 					<span translate="shared.edit" acl-has-project-role="owner"></span>
