--- a/client/dev/partials/projects/list.html
+++ b/client/dev/partials/projects/list.html
@@ -33,9 +33,7 @@
 
 			</td>
 			<td><a ui-sref="main.project.logical_frame({projectId: project._id})">{{project.name}}</a></td>
-			<td>
-				{{project.themes | getObjects:themes | pluck:'name' | join:', '}}
-			</td>
+			<td>{{project.themes | getObjects:themes | pluck:'name' | join:', '}}</td>
 			<td>{{project.begin|amDateFormat:'YYYY-MM-DD'}}</td>
 			<td>{{project.end|amDateFormat:'YYYY-MM-DD'}}</td>
 		</tr>
